--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Vocal Studio Support</title>
+  <meta charset="UTF-8">
+  <title>Vocal Studio Support</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #FFFFFF;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .container {
+      background-color: #1A1A1A;
+      border-radius: 12px;
+      padding: 2rem;
+      max-width: 500px;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(142, 240, 178, 0.1);
+    }
+
+    h1 {
+      color: #8EF0B2;
+      font-size: 1.8rem;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.5;
+      text-align: center;
+    }
+
+    a {
+      color: #8EF0B2;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
     <h1>Vocal Studio — Support</h1>
     <p>Thank you for using Vocal Studio!</p>
-    <p>If you need help, please email us at: <a href="mailto:philip@vocalstudioapp.com">philip@vocalstudioapp.com</a></p>
+    <p>If you need help, feel free to reach out to us at:<br>
+      <a href="mailto:philip@vocalstudioapp.com">philip@vocalstudioapp.com</a>
+    </p>
+  </div>
 </body>
 </html>
