Add FAQ section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
     a:hover {
       text-decoration: underline;
     }
+
+    .faq-section {
+      margin-top: 2rem;
+      border-top: 1px solid #333;
+      padding-top: 2rem;
+    }
+
+    .faq-item {
+      margin-bottom: 1.5rem;
+      text-align: left;
+    }
+
+    .faq-question {
+      font-weight: 600;
+      color: #8EF0B2;
+      margin-bottom: 0.5rem;
+      font-size: 1.1rem;
+    }
+
+    .faq-answer {
+      color: #CCCCCC;
+      line-height: 1.6;
+      margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -55,6 +79,25 @@
     <p>If you need help, feel free to reach out to us at:<br>
       <a href="mailto:philip@vocalstudioapp.com">philip@vocalstudioapp.com</a>
     </p>
+
+    <div class="faq-section">
+      <h2 style="color: #8EF0B2; font-size: 1.4rem; text-align: center; margin-bottom: 1.5rem;">Frequently Asked Questions</h2>
+      
+      <div class="faq-item">
+        <div class="faq-question">How do I get started?</div>
+        <p class="faq-answer">Open the app and create a collection and choose an exercise! Feel free to explore our entire exercise library.</p>
+      </div>
+
+      <div class="faq-item">
+        <div class="faq-question">How do I change keys?</div>
+        <p class="faq-answer">You can change the pitch range by clicking on the circular button with note name like D4. Top button is the starting pitch and bottom button is the ending pitch.</p>
+      </div>
+
+      <div class="faq-item">
+        <div class="faq-question">Can I access Vocal Studio without wifi?</div>
+        <p class="faq-answer">The data is stored locally on your phone, so you can practice without needing wifi.</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
