--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     <p>If you need help, feel free to reach out to us at:<br>
       <a href="mailto:philip@vocalstudioapp.com">philip@vocalstudioapp.com</a>
     </p>
-
+    <p style="text-align: center; margin-top: 1rem;">
+      <a href="privacy.html">Privacy Policy</a>
+    </p>
     <div class="faq-section">
       <h2 style="color: #8EF0B2; font-size: 1.4rem; text-align: center; margin-bottom: 1.5rem;">Frequently Asked Questions</h2>
       
