add vocal studio favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Vocal Studio Support</title>
+  <link rel="icon" type="image/png" href="VOCAL_STUDIO_LOGO.png">
   <style>
     body {
       background-color: #000;
